# cargo-pvm-contract

./: Cargo.toml  README.md
src/: main.rs
templates/blank/: Cargo.toml
templates/blank/src/: contract.rs
templates/no-alloc/: Cargo.toml
templates/pico-alloc/: _Cargo.toml
